--- a/iframe-test/parent.html
+++ b/iframe-test/parent.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <h3>这个父页面</h3>
-    <iframe id="iframe" src="./child.html" width="500" height="300"></iframe>
+    <iframe id="iframe" src="./child1.html" width="100%" height="100%"></iframe>
+    <!-- <iframe id="iframe" src="./child2.html"></iframe> -->
+    <!-- <iframe id="iframe" src="./child3.html"></iframe> -->
+
     <script src="./parent.js"></script>
 </body>
 </html>
