--- a/boxmodel/offset/index.html
+++ b/boxmodel/offset/index.html
@@ -32,10 +32,11 @@
     <div id="outer" class="outer">
         <div id="inner" class="inner">
             <div id="center" class="center">
-
+               
             </div>
         </div>
     </div>
+    <script src="../../utils.js"></script>
     <script src="./main.js"></script>
 </body>
 </html>
