--- a/tab/tab.html
+++ b/tab/tab.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="reset.min.css">
 </head>
 <body>
-    <div class="tab--box" id="tabBox">
-        <ul>
+    <div class="tabBox">
+        <ul class="tab">
             <li class="active">tab1</li>
             <li>tab2</li>
             <li>tab3</li>
@@ -19,6 +19,31 @@
         <div>tab2</div>
         <div>tab3</div>
     </div>
-    <script src="main.js"></script>
+
+    <div class="tabBox">
+        <ul class="tab">
+            <li class="active">tab11</li>
+            <li>tab22</li>
+            <li>tab33</li>
+        </ul>
+        <div class="active">tab11</div>
+        <div>tab22</div>
+        <div>tab33</div>
+    </div>
+
+    <div class="tabBox">
+        <ul class="tab">
+            <li class="active">tab111</li>
+            <li>tab222</li>
+            <li>tab333</li>
+        </ul>
+        <div class="active">tab111</div>
+        <div>tab222</div>
+        <div>tab333</div>
+    </div>
+    <script src="../utils.js"></script>
+    <!-- <script src="main.js"></script> -->
+    <!-- <script src="./tabplugin.js"></script> -->
+    <script src="./tabplugin-1.js"></script>
 </body>
 </html>
