--- a/iframe-test/parent.html
+++ b/iframe-test/parent.html
@@ -11,7 +11,8 @@
     <iframe id="iframe" src="./child1.html" width="100%" height="100%"></iframe>
     <!-- <iframe id="iframe" src="./child2.html"></iframe> -->
     <!-- <iframe id="iframe" src="./child3.html"></iframe> -->
-
+    
     <script src="./parent.js"></script>
+    <!-- <script src="./demo.js"></script> -->
 </body>
 </html>
