--- a/domevent/dom2/index.html
+++ b/domevent/dom2/index.html
@@ -6,13 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <style>
+    html,
+    body {
+      height: 100%;
+    }
+  </style>
+
+
 </head>
 
 <body>
-  <button id="test">测试点击</button>
   <script src="./jianrong-1.js"></script>
   <script>
-    var testNode = document.getElementById('test');
     var fn1 = function (e) {
       console.log(1);
     }
@@ -24,14 +30,14 @@
     }
     var fn4 = function (e) {
       console.log(4);
-      off(testNode, 'click', fn1);
-      off(testNode, 'click', fn2);
+      off(document.body, 'click', fn1);
+      off(document.body, 'click', fn2);
     }
+    on(document.body, 'click', fn1);
+    on(document.body, 'click', fn2);
+    on(document.body, 'click', fn3);
+    on(document.body, 'click', fn4);
 
-    on(testNode, 'click', fn1);
-    on(testNode, 'click', fn2);
-    on(testNode, 'click', fn3);
-    on(testNode, 'click', fn4);
 
   </script>
 
